name:                balls
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/balls#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Model,
    Draw,
    Utility
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    gloss,
    linear,
    lens,
    random

executable balls
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    balls,
    gloss
  default-language:    Haskell2010
